--- a/DarkTheme/Application/build.gradle
+++ b/DarkTheme/Application/build.gradle
@@ -2,11 +2,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:4.2.0'
     }
 }
 
@@ -16,7 +16,7 @@ apply plugin: 'kotlin-android'
 
 repositories {
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
