--- a/DarkTheme/build.gradle
+++ b/DarkTheme/build.gradle
@@ -1,28 +1,16 @@
 
-
-
-
-
-
-
-
-
-
-
-
-
 if(hasProperty('target') && target == 'android') {
   android.vectorDrawables.useSupportLibrary = true
 }
 buildscript {
-  ext.kotlin_version = '1.4.32'
+  ext.kotlin_version = '1.5.0'
   repositories {
-    mavenCentral()
-    jcenter()
     google()
+    mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:4.1.3'
+    classpath 'com.android.tools.build:gradle:4.2.0'
+    //noinspection DifferentKotlinGradleVersion
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
