--- a/EmojiCompatKotlin/app/build.gradle
+++ b/EmojiCompatKotlin/app/build.gradle
@@ -16,12 +16,14 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.4.32'
+        kotlin_version = '1.5.0'
     }
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
     }
     dependencies {
+        //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
