--- a/Notifications/Wearable/build.gradle
+++ b/Notifications/Wearable/build.gradle
@@ -2,11 +2,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:4.2.0'
     }
 }
 
@@ -14,20 +14,20 @@ apply plugin: 'com.android.application'
 
 repositories {
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.wear:wear:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.wear:wear:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
 
 
-    compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    compileOnly 'com.google.android.wearable:wearable:2.8.1'
 
-    implementation 'com.google.android.support:wearable:2.5.0'
+    implementation 'com.google.android.support:wearable:2.8.1'
 
     implementation project(':Shared')
 }
@@ -42,7 +42,7 @@ List<String> dirs = [
 
 android {
 
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
         versionCode 1
@@ -50,7 +50,7 @@ android {
 
         minSdkVersion 23
 
-        targetSdkVersion 29
+        targetSdkVersion 30
 
          multiDexEnabled true
 
