--- a/TextStyling/build.gradle
+++ b/TextStyling/build.gradle
@@ -19,10 +19,10 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -32,7 +32,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -44,19 +44,19 @@ task clean(type: Delete) {
 ext {
     // Sdk and tools
     minSdkVersion = 15
-    targetSdkVersion = 27
-    compileSdkVersion = 28
+    targetSdkVersion = 30
+    compileSdkVersion = 30
 
     // App dependencies
-    appCompat = '1.0.2'
+    appCompat = '1.2.0'
     supportLibraryVersion = '28.0.0'
-    constraintLayoutVersion = '1.1.3'
-    junitVersion = '4.12'
-    mockitoVersion = '1.10.19'
+    constraintLayoutVersion = '2.0.4'
+    junitVersion = '4.13.2'
+    mockitoVersion = '3.9.0'
     hamcrestVersion = '1.3'
-    runnerVersion = '1.1.1'
+    runnerVersion = '1.3.0'
     rulesVersion = '1.0.1'
-    espressoVersion = '3.1.1'
+    espressoVersion = '3.3.0'
     dexmakerVersion = '1.2'
     dexmakerMockitoVersion = '1.2'
 }
