--- a/TextStyling/app/build.gradle
+++ b/TextStyling/app/build.gradle
@@ -14,6 +14,7 @@
  * limitations under the License.
  */
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -51,4 +52,9 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "com.google.dexmaker:dexmaker:$dexmakerVersion"
     androidTestImplementation "com.google.dexmaker:dexmaker-mockito:$dexmakerMockitoVersion"
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
