--- a/TextStyling/build.gradle
+++ b/TextStyling/build.gradle
@@ -16,6 +16,7 @@
 // Top-level build file where you can add configuration :options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.5.0'
 
     repositories {
         google()
@@ -23,6 +24,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.0'
+        //noinspection DifferentKotlinGradleVersion
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
