--- a/TextStylingKotlin/build.gradle
+++ b/TextStylingKotlin/build.gradle
@@ -16,13 +16,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.21'
+    ext.kotlin_version = '1.5.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.2.1'
+        //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -33,7 +34,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -50,16 +51,16 @@ ext {
     buildToolsVersion = '28.0.3'
 
     // App dependencies
-    appCompat = '1.0.2'
+    appCompat = '1.3.0'
     supportLibraryVersion = '28.0.0'
-    constraintLayoutVersion = '1.1.3'
-    junitVersion = '4.12'
-    mockitoVersion = '1.10.19'
+    constraintLayoutVersion = '2.0.4'
+    junitVersion = '4.13.2'
+    mockitoVersion = '3.10.0'
     hamcrestVersion = '1.3'
-    runnerVersion = '1.1.1'
+    runnerVersion = '1.3.0'
     rulesVersion = '1.0.1'
-    espressoVersion = '3.1.1'
-    androidktx = "1.0.1"
+    espressoVersion = '3.3.0'
+    androidktx = '1.5.0'
     dexmakerVersion = '1.2'
     dexmakerMockitoVersion = '1.2'
 }
