--- a/People/app/build.gradle
+++ b/People/app/build.gradle
@@ -33,10 +33,10 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
-    implementation 'androidx.fragment:fragment-ktx:1.3.3'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.core:core-ktx:1.6.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.4.0-alpha01'
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
@@ -47,7 +47,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -57,5 +57,5 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     testImplementation 'androidx.test.ext:truth:1.3.0'
-    testImplementation 'com.google.truth:truth:1.0'
+    testImplementation 'com.google.truth:truth:1.1.2'
 }
