--- a/TextStyling/app/build.gradle
+++ b/TextStyling/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "com.google.dexmaker:dexmaker:$dexmakerVersion"
     androidTestImplementation "com.google.dexmaker:dexmaker-mockito:$dexmakerMockitoVersion"
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 repositories {
     mavenCentral()
