--- a/WindowInsetsAnimation/app/build.gradle
+++ b/WindowInsetsAnimation/app/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0-beta02'
+    implementation 'androidx.core:core-ktx:1.6.0-rc01'
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
