--- a/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
+++ b/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2013 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -34,8 +33,8 @@
          define it on a per-application basis. -->
     <application
         android:allowBackup="false"
-        android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         tools:ignore="AllowBackup">
 
         <!-- Every activity needs its own Manifest element.  The intent-filter contained in the
@@ -45,9 +44,11 @@
              different Activities available in the launcher, you could just make 5 activities
              with that intent filter.  Please don't do that.  Just because it's a good example
              doesn't mean it's a good idea. -->
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name"
-                  android:uiOptions="splitActionBarWhenNarrow">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
