--- a/AppWidget/app/src/main/AndroidManifest.xml
+++ b/AppWidget/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     package="com.example.android.appwidget">
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -55,6 +55,18 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_items_list" />
+        </receiver>
+
+        <receiver
+            android:name=".WeatherForecastAppWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_weather_forecast" />
         </receiver>
 
         <service
