--- a/AppWidget/settings.gradle
+++ b/AppWidget/settings.gradle
@@ -19,6 +19,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "AppWidget"
