--- a/DocumentCentricApps/Application/src/main/AndroidManifest.xml
+++ b/DocumentCentricApps/Application/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2014 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,15 +20,18 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <application android:allowBackup="false"
-        android:label="@string/app_name"
+    <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
 
-        <activity android:name="com.example.android.documentcentricapps.DocumentCentricActivity"
-                  android:label="@string/app_name"
-                  android:persistableMode="persistAcrossReboots">
+        <activity
+            android:name="com.example.android.documentcentricapps.DocumentCentricActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:persistableMode="persistAcrossReboots">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -37,8 +39,7 @@
         </activity>
         <activity
             android:name="com.example.android.documentcentricapps.NewDocumentActivity"
-            android:label="@string/activity_new_document_title" >
-        </activity>
+            android:label="@string/activity_new_document_title" />
     </application>
 
 </manifest>
