--- a/DragAndDropAcrossApps/DragSource/src/main/AndroidManifest.xml
+++ b/DragAndDropAcrossApps/DragSource/src/main/AndroidManifest.xml
@@ -16,19 +16,22 @@
      limitations under the License.
 -->
 
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.dragsource"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.dragsource">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="DragSource Sample"
         tools:ignore="AllowBackup">
-        <activity android:name="com.example.android.dragsource.MainActivity">
+        <activity
+            android:name="com.example.android.dragsource.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
