--- a/ElevationBasic/Application/src/main/AndroidManifest.xml
+++ b/ElevationBasic/Application/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2014 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -22,15 +21,18 @@
     android:versionName="1.0">
 
 
-    <application android:allowBackup="false"
-        android:label="@string/app_name"
+    <application
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
         android:theme="@android:style/Theme.Material.Light"
         tools:ignore="AllowBackup">
 
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name"
-                  android:uiOptions="splitActionBarWhenNarrow">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
