--- a/EmojiCompat/app/src/main/AndroidManifest.xml
+++ b/EmojiCompat/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:windowSoftInputMode="stateUnchanged">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
