--- a/TextLinkify/Application/src/main/AndroidManifest.xml
+++ b/TextLinkify/Application/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
+<?xml version="1.0" encoding="UTF-8"?><!--
  Copyright 2013 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,7 +13,6 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-
 
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,7 +31,8 @@
         tools:ignore="AllowBackup">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
