--- a/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
+++ b/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2020 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -29,6 +28,7 @@
 
         <activity
             android:name="com.google.android.samples.insetsanimation.MainActivity"
+            android:exported="true"
             android:label="@string/app_name">
 
             <intent-filter>
